правка конфликта платежных систем в настройках

--- a/nginx.cfg
+++ b/nginx.cfg
@@ -1,6 +1,6 @@
   server {
     listen 80;
-    server_name moguta-kassa.komtet.ru;
+    server_name moguta-kassa.localhost.com;
 
 
     gzip            on;
