--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -3,6 +3,7 @@ version: '3'
 services:
   db:
     image: mysql:5.7
+    platform: linux/amd64
     environment:
       MYSQL_ROOT_PASSWORD: my_secret_pw_shh
       MYSQL_DATABASE: test_db
@@ -14,6 +15,7 @@ services:
       - "9906:3306"
   web:
     image: moguta_web:last
+    platform: linux/amd64
     build: ./
     container_name: php_web
     depends_on:
