Добавлена поддержка признака расчета в сети «Интернет»

--- a/nginx.cfg
+++ b/nginx.cfg
@@ -1,6 +1,6 @@
   server {
     listen 80;
-    server_name moguta-kassa.localhost.com;
+    server_name moguta-kassa.localhost;
 
 
     gzip            on;
